--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -11,10 +11,7 @@ spring:
     cache: false
   hadoop:
     config:
-      fs:
-        defaultFS: hdfs://192/168/0/101:8020
-    fsshell:
-      enabled: true
+      fs.defaultFS: hdfs://localhost:9000
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
