做完登录界面和首页左侧边栏

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -17,6 +17,8 @@ spring:
       enabled: true
       max-file-size: 1GB
       max-request-size: 4GB
+  mvc:
+    static-path-pattern: /static/**
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
